fixing marquee run on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,26 @@
 .modal-content{
 	border-radius: 2px;
 }
+
+.marquee {
+	float: left;
+	margin: 0;
+	padding: 18px 0px;
+	width: 60%;
+	height: 18px;	
+	overflow: hidden;
+	position: relative;
+    white-space: nowrap;
+    box-sizing: border-box;
+    animation: marquee 20s linear infinite;	
+}
+.marquee:hover {
+  animation-play-state: paused
+}
+@keyframes marquee { 
+0% { text-indent: 100% }
+100%{text-indent: -50%}
+}
 @media (max-width: 991px) {
 	.nav-md .container.body .top_toolbar {
         width: 100%;
@@ -101,6 +121,9 @@
 	.toolbar-left{
 		text-align:center;
 	}
+	.marquee {
+		width: 50%;
+	}	
 }
 pre{
 	display: block;
@@ -124,25 +147,5 @@ pre{
 }
 .displayed{
 	display: block;
-}
-
-.marquee {
-	float: left;
-	margin: 0;
-	padding: 18px 0px;
-	width: 60%;
-	height: 18px;	
-	overflow: hidden;
-	position: relative;
-    white-space: nowrap;
-    box-sizing: border-box;
-    animation: marquee 20s linear infinite;	
-}
-.marquee:hover {
-  animation-play-state: paused
-}
-@keyframes marquee { 
-0% { text-indent: 100% }
-100%{text-indent: -50%}
 }
 
